# bloxoff-engine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml
.github/workflows/: Check PR.yml  Deploy Wiki.yml  Main.yml  Release.yml  development PR.yml
docs/wiki/: Home.md  main.md
includes/: Application.hpp  Event.hpp  Logger.hpp  Window.hpp
src/: Application.cpp  Window.cpp  main.cpp
tests/: CMakeLists.txt
